force-app/main/default/objects/Fortnite_Player_Data__c/Fortnite_Player_Data__c.object-meta.xml
<CustomObject>
    <label>Fortnite Player Data</label>
    <nameField>
        <label>dataname</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Fortnite Players Data</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>