force-app/main/default/objects/Fortnite_Player_Data__c/fields/Fortnite_Player__c.field-meta.xml
<CustomField>
    <fullName>Fortnite_Player__c</fullName>
    <label>Fortnite Player</label>
    <referenceTo>Fortnite_Player__c</referenceTo>
    <relationshipLabel>Fortnite Players Data</relationshipLabel>
    <relationshipName>Fortnite_Players_Data</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>