force-app/main/default/objects/Fortnite_Player_Data__c/fields/platform__c.field-meta.xml
<CustomField>
    <fullName>platform__c</fullName>
    <label>platform</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>pc</fullName>
            </value>
            <value>
                <fullName>xb1</fullName>
            </value>
            <value>
                <fullName>ps4</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>