force-app/main/default/objects/Fortnite_Player_Data__c/fields/stats__c.field-meta.xml
<CustomField>
    <fullName>stats__c</fullName>
    <description>The stats JSON, a simple kev-value map</description>
    <label>stats</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>