force-app/main/default/objects/Fortnite_Player_Data__c/fields/totals__c.field-meta.xml
<CustomField>
    <fullName>totals__c</fullName>
    <description>The totals for the player, a simple key-value map</description>
    <label>totals</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>