force-app/main/default/objects/Fortnite_Player_Data__c/fields/window__c.field-meta.xml
<CustomField>
    <fullName>window__c</fullName>
    <description>The time period, including all time or specific seasons</description>
    <label>window</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>alltime</fullName>
            </value>
            <value>
                <fullName>season6</fullName>
            </value>
            <value>
                <fullName>season5</fullName>
            </value>
            <value>
                <fullName>season4</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>