force-app/main/default/objects/Fortnite_Player_Data__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>platform__c</columns>
    <columns>stats__c</columns>
    <columns>totals__c</columns>
    <columns>window__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>